<resources>
    <string name="app_name">Inventory_App</string>
    <string name="dummy_data">Insert dummy data</string>
    <string name="minus">\u0020-\u0020</string>
    <string name="tag_main_activity">Main Activity</string>
    <string name="dummy_name">Royals</string>
    <string name="dummy_price">100</string>
    <string name="dummy_quantity">5</string>
    <string name="dummy_supplier_name">Pearson</string>
    <string name="dummy_supplier_phone_number">+583995797604</string>
    <string name="dummy_supplier_email">supplier@gmail.com</string>
    <string name="new_row_id">New row ID:\u0020</string>
    <string name="table_contains"> The product table contains\u0020</string>
    <string name="rows">\u0020rows.</string>
    <string name="inventory">Inventory</string>
    <string name="delete_all_entries">Delete all entries</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="product">Product</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_price_unit">Price unit</string>
    <string name="product_price_unit">€</string>
    <string name="minus_button">-</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="plus_button">+</string>
    <string name="supplier">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone_number">Phone Number</string>
    <string name="hint_supplier_email">Email</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="delete_all_products_unsuccessful">Error with deleting all products</string>
    <string name="delete_all_products_successful">All products deleted</string>
    <string name="proceed">Proceed</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="product_activity_input_fields">All fields must be correctly filled</string>
    <string name="product_out_of_stock">This product is out of stock!</string>
    <string name="sell_button">Sell button</string>
    <string name="empty_inventory">Your inventory is empty.\nStart adding products.</string>
    <string name="display_price">Price: %s €</string>
    <string name="display_quantity">In stock: %s</string>
    <string name="display_no_quantity">Out of stock!</string>
    <string name="add_a_product_activity_title">Add a Product</string>
    <string name="edit_product_activity_title">Edit Product</string>
    <string name="empty_string" />
    <string name="phone_number_intent_data">tel:%s</string>
    <string name="zero">0</string>
    <string name="missing_field_for_product">Missing field %s</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_unsuccessful">Error with deleting product</string>
    <string name="product_price_equals_zero">Price should be different than 0</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="call_supplier_button">Call Supplier</string>
    <string name="email_supplier_button">Email supplier</string>
    <string name="suppliers_email">Supplier\'s email</string>
    <string name="suppliers_phone_number">Supplier\'s phone number</string>
    <string name="missing_sign_in_email">Email misses @ sign</string>
    <string name="monkey">\@</string>
    <string name="dot">.</string>
    <string name="email_intent_data">New order for %s</string>
    <string name="missing_sign_2_in_email">Email misses . sign</string>
    <string name="mail_intent_data">mailto:%s</string>
    <string name="email_intent_extra_data">We need more %s. It is out of stock!  Hurry with shipping please.</string>
    <string name="name_has_incorrect_signs">Incorrect signs are entered</string>
    <string name="regex_for_name">^[a-zA-Z0-9_]+$</string>
    <string name="product_image">Product image</string>

</resources>