<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/product" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/ProductEditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/ProductEditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/label_price_unit"
                    style="@style/ProductEditorUnitsStyle"
                    android:gravity="end"
                    android:hint="@string/hint_product_price_unit"
                    android:text="@string/product_price_unit"
                    android:textAlignment="textEnd" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/minus_button" />

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/ProductEditorFieldStyle"
                    android:layout_weight="1"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:text="@string/plus_button" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/choose_image_button"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Choose image"/>
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add"
                    android:id="@+id/product_image"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingStart="4dp">

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/ProductEditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/ProductEditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edit_supplier_email"
                style="@style/ProductEditorFieldStyle"
                android:hint="@string/hint_supplier_email"
                android:inputType="textEmailAddress"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contact_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:text="@string/contact_supplier"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorAccent" />

        <ImageButton
            android:id="@+id/call_supplier_button"
            android:contentDescription="@string/suppliers_email"
            android:src="@drawable/ic_call"
            android:text="@string/call_supplier_button"
            style="@style/contact_supplier_button" />

        <ImageButton
            android:id="@+id/email_supplier_button"
            android:contentDescription="@string/suppliers_phone_number"
            android:src="@drawable/ic_mail"
            android:text="@string/email_supplier_button"
            style="@style/contact_supplier_button" />
    </LinearLayout>
</LinearLayout>